--- a/package.json
+++ b/package.json
@@ -6,20 +6,29 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "local": "node server-local.js",
+    "dev-local": "nodemon server-local.js",
     "build": "echo 'No build step required'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["youtube", "notes", "timestamps", "web-app"],
+  "keywords": [
+    "youtube",
+    "notes",
+    "timestamps",
+    "web-app"
+  ],
   "author": "Nghia Trung Ngo",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
+    "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express-validator": "^7.0.1"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
