--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev-local": "nodemon server-local.js",
     "cloud": "node server-cloud.js",
     "dev-cloud": "nodemon server-cloud.js",
+    "supabase": "node server-supabase.js",
+    "dev-supabase": "nodemon server-supabase.js",
     "build": "echo 'No build step required'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-validator": "^7.0.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "@supabase/supabase-js": "^2.38.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
