🧹 CLEANUP: Remove all MongoDB dependencies and files
- Deleted server.js (MongoDB version) and server-cloud.js (PostgreSQL version)
- Updated package.json: main entry point now points to server-supabase.js
- Removed unused scripts: local, cloud, dev-local, dev-cloud
- Removed dependencies: mongoose, pg, express-validator
- Updated env.example and env.production to use Supabase credentials
- Updated setup.sh to reflect Supabase setup instead of MongoDB
- Updated health check message to remove MongoDB references
- Cleaned up package-lock.json and node_modules
- Project now exclusively uses Supabase (PostgreSQL) backend

--- a/env.example
+++ b/env.example
@@ -1,8 +1,9 @@
 # Server Configuration
 PORT=3000
 
-# MongoDB Connection
-MONGODB_URI=mongodb://localhost:27017/youtube_notes
+# Supabase Connection
+SUPABASE_URL=your_supabase_url_here
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # JWT Secret (change this in production!)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
