--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "youtube-note-clipper",
   "version": "1.0.0",
   "description": "A web-based tool for taking timestamped notes on YouTube videos with user authentication",
-  "main": "server.js",
+  "main": "server-supabase.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "local": "node server-local.js",
-    "dev-local": "nodemon server-local.js",
-    "cloud": "node server-cloud.js",
-    "dev-cloud": "nodemon server-cloud.js",
+    "start": "node server-supabase.js",
+    "dev": "nodemon server-supabase.js",
     "supabase": "node server-supabase.js",
     "dev-supabase": "nodemon server-supabase.js",
     "build": "echo 'No build step required'",
@@ -29,10 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
-    "pg": "^8.11.3"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
